# Database-Engine

./: ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md
examples/: btree_example.cpp  database_demo.cpp  main.cpp  simple_btree_test.cpp
src/buffer/: buffer_pool_manager.cpp  buffer_pool_manager.h  lru_replacer.cpp  lru_replacer.h
src/common/: config.h  types.cpp  types.h
src/execution/: executor.h  insert_executor.cpp  insert_executor.h  query_engine.cpp  query_engine.h  seq_scan_executor.cpp  seq_scan_executor.h
src/execution/expressions/: expression.h
src/index/: simple_btree.cpp  simple_btree.h
src/storage/: disk_manager.cpp  disk_manager.h  page.h
src/table/: schema.cpp  schema.h  table.cpp  table.h  table_heap.cpp  table_heap.h  table_page.cpp  table_page.h  tuple.cpp  tuple.h
